Release Notes - Mesos - Version 1.5.0 (WIP)
-------------------------------------------
This release contains the following new features:

Deprecations/Removals:
  * Agent flag `--executor_secret_key` has been deprecated. Operators
    should use `--jwt_secret_key` instead.

Additional API Changes:
  * [MESOS-7660] `Filter::refuse_seconds` is now capped to 31536000
    seconds (365 days).
  * [MESOS-7941] Built-in executors will now send a TASK_STARTING
    status update when a task is starting.
  * [MESOS-8165] Master will now send TASK_GONE status for unknown
    tasks of PARTITION_AWARE frameworks belonging to registered agents
    during explicit reconciliation.
  * [MESOS-7550] The fields `Resource.disk.source.path.root` and
    `Resource.disk.source.mount.root` can now be set to relative paths
    to an agent's work directory.
  * [MESOS-8040] Return nested/standalone containers in `GET_CONTAINERS`
    API call.

Unresolved Critical Issues:

Feature Graduations:
* v1 Operator API is now considered stable.


All Experimental Features:


Release Notes - Mesos - Version 1.4.2
-------------------------------------------
* This is a bug fix release.

** Bug
 * [MESOS-8237] - Strip (Offer|Resource).allocation_info for non-MULTI_ROLE schedulers.


Release Notes - Mesos - Version 1.4.1
-------------------------------------------
* This is a bug fix release.

** Bug
 * [MESOS-7873] - Expose `ExecutorInfo.ContainerInfo.NetworkInfo` in Mesos `state` endpoint.
 * [MESOS-7921] - ProcessManager::resume sometimes crashes accessing EventQueue.
 * [MESOS-7964] - Heavy-duty GC makes the agent unresponsive.
 * [MESOS-7968] - Handle `/proc/self/ns/pid_for_children` when parsing available namespace.
 * [MESOS-7969] - Handle cgroups v2 hierarchy when parsing /proc/self/cgroups.
 * [MESOS-7980] - Stout fails to compile with libc >= 2.26.
 * [MESOS-8051] - Killing TASK_GROUP fail to kill some tasks.